pipeline-integration/juice-shop/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juice-shop
    app.kubernetes.io/instance: juice-shop
  name: juice-shop-service
  namespace: dso-juice-shop
spec:
  ports:
    - appProtocol: tcp
      port: 3000
      targetPort: 3000
  selector:
    app: juice-shop
  type: ClusterIP
