pipeline-integration/juice-shop/Manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dso-juice-shop
  namespace: dso-juice-shop
spec:
  host: <Application URL>
  to:
    kind: Service
    name: juice-shop-service
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
